# YAAL

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md  YAAL-1.0.4-1-x86_64.pkg.tar.zst  YAAL-1.0.5-1-x86_64.pkg.tar.zst  YAAL-debug-1.0.4-1-x86_64.pkg.tar.zst  YAAL-debug-1.0.5-1-x86_64.pkg.tar.zst  compile.sh
pkg/YAAL/: .BUILDINFO  .MTREE  .PKGINFO
pkg/YAAL-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/: app.rs  default.css  default.toml  main.rs
src/YAAL-1.0.3/: PKGBUILD
src/YAAL-1.0.4/: Cargo.toml
src/YAAL-1.0.5/: LICENSE  yaal.desktop
src/YAAL-1.0.5/src/: app.rs
src/loader/: loader.rs
src/logic/: entries.rs
src/ui/: mod.rs  widgets.rs  window.rs
