[package]
name = "yaal"
version = "1.0.6"
edition = "2024"

[dependencies]  
gtk = { version = "0.9.6", package = "gtk4" }
glib = "0.20.9"
gdk = { version = "0.9.0", package = "gdk4" }
dirs = "6.0"
toml = "0.8.22"
libloading = "0.8.6"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
fuzzy-matcher = "0.3.7"